--- a/P000599.opf/meta.yml
+++ b/P000599.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W1KG655
   title: གསར་བསྒྱུར་རཱ་མ་ཡཱ་ཎའི་རྟོགས་བརྗོད།
   author: ''
-  volumes: ''
+  volumes:
+    93b8ecc1790341eb87d7ad12c1fe4440:
+      image_group_id: I1KG1219
+      title: ''
+      volume_number: 1
+      total_pages: 316
