--- a/P000599.opf/layers/v001/Pagination.yml
+++ b/P000599.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 8bbd6a5f16344add98479f66187fa9c4
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   43fbf61b99e84739b4f6e65b2b1971be:
