--- a/P000599.opf/meta.yml
+++ b/P000599.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P000599
 initial_creation_type: ocr
 created_at: 27/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-16 15:49:50.473361
 source_metadata:
   id: bdr:W1KG655
   title: གསར་བསྒྱུར་རཱ་མ་ཡཱ་ཎའི་རྟོགས་བརྗོད།
@@ -12,3 +12,5 @@ source_metadata:
       title: ''
       volume_number: 1
       total_pages: 316
+  access: http://purl.bdrc.io/admindata/AccessFairUse
+  restrictedInChina: false
